@@ -18,6 +18,9 @@
         <java.version>16</java.version>
         <!--Overide lombok version because from 1.18.18 we get an error-->
         <lombok.version>1.18.20</lombok.version>
+        
+        <release.version>0.0.2</release.version>
+        <development.version>0.0.3</development.version>
     </properties>
     
     <dependencies>
@@ -126,9 +129,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <configuration>
-                    <goals>install</goals>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -139,6 +139,60 @@
             </plugin>
         </plugins>
     </build>
+    
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <configuration>
+                                    <releaseVersion>${release.version}</releaseVersion>
+                                    <developmentVersion>${development.version}</developmentVersion>
+                                </configuration>
+                                <goals>
+                                    <goal>prepare</goal>
+                                </goals>
+                                <phase>install</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <version>1.5.1</version>
+                        <executions>
+                            <execution>
+                                <configuration>
+                                    <name>flight-events</name>
+                                    <input>${project.build.directory}/dist</input>
+                                    <destination>${project.build.directory}/install</destination>
+                                    <winConsole>true</winConsole>
+                                    <addModules>java.base,java.datatransfer,java.logging,java.xml,java.management,java.naming,java.desktop,java.instrument,jdk.unsupported</addModules>
+                                    <mainJar>${project.parent.artifactId}-${project.artifactId}-exec.jar</mainJar>
+                                    <temp>${project.build.directory}/temp-package</temp>
+                                    <javaOptions>
+                                        <option>--enable-preview</option>
+                                        <option>-Dspring.config.import=file:./app/settings.yaml</option>
+                                    </javaOptions>
+                                    <winDirChooser>true</winDirChooser>
+                                    <appVersion>${release.version}</appVersion>
+                                </configuration>
+                                <goals>
+                                    <goal>jpackage</goal>
+                                </goals>
+                                <phase>install</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     
     <repositories>
         <repository>
